--- a/translations/pt.json
+++ b/translations/pt.json
@@ -59,5 +59,10 @@
   "import_success_description": "Os dados da prateleira foram atualizados.",
   "import_error_title": "Erro na importação",
   "import_error_invalid_json": "O arquivo selecionado não é um JSON válido.",
-  "import_error_reading_file": "Falha ao ler o arquivo."
+  "import_error_reading_file": "Falha ao ler o arquivo.",
+  "import_dialog_title": "Importar Dados da Estante",
+  "import_dialog_description": "Você deseja mesclar os dados importados com os dados existentes ou substituí-los completamente?",
+  "import_dialog_cancel": "Cancelar",
+  "import_dialog_merge": "Mesclar",
+  "import_dialog_replace": "Substituir"
 }
