- Added ResetDialog component and related functionality to reset shelf data. - Added MoveNotebooksDialog component and related functionality to move notebooks between cells. - Updated EditCellDialog to include move and delete

--- a/translations/pt.json
+++ b/translations/pt.json
@@ -58,7 +58,20 @@
   "import_success_title": "Importação bem-sucedida",
   "import_success_description": "Os dados da prateleira foram atualizados.",
   "import_error_title": "Erro na importação",
-  "import_error_invalid_json": "O arquivo selecionado não é um JSON válido.",
+  "import_error_invalid_json": "Ocorreu um erro ao analisar o arquivo JSON. Verifique se o formato está correto.",
+  "reset_button": "Resetar",
+  "reset_dialog_title": "Você tem certeza?",
+  "reset_dialog_description": "Esta ação não pode ser desfeita. Todos os seus dados de prateleira serão permanentemente apagados.",
+  "confirm_reset_button": "Sim, resetar",
+  "cancel_button": "Cancelar",
+  "reset_success_title": "Prateleira Resetada",
+  "reset_success_description": "Sua prateleira foi resetada para o estado inicial.",
+  "move_notebooks_title": "Mover Cadernos",
+  "move_notebooks_description": "Selecione a célula de destino para mover os cadernos selecionados.",
+  "target_cell_label": "Célula de Destino",
+  "move_button": "Mover",
+  "delete_selected_button": "Deletar Selecionados"
+}
   "import_error_reading_file": "Falha ao ler o arquivo.",
   "import_dialog_title": "Importar Dados da Estante",
   "import_dialog_description": "Você deseja mesclar os dados importados com os dados existentes ou substituí-los completamente?",
