Updated dependencies to latest versions

--- a/translations/pt.json
+++ b/translations/pt.json
@@ -23,6 +23,7 @@
   "search_by_barcode_placeholder": "Pesquisar por código de barras...",
   "more_options_button": "Mais opções",
   "export_json_button": "Exportar JSON",
+  "import_json_button": "Importar JSON",
   "view_faq_button": "Ver FAQ",
   "github_link": "GitHub",
   "edit_slot_title": "Editar Slot: Col {col}, Linha {row}",
@@ -54,28 +55,35 @@
   "barcode": "Código de barras",
   "required": "obrigatório",
   "add_notebook": "Adicionar Caderno",
-  "import_json_button": "Importar JSON",
+  "import_button": "Importar JSON",
   "import_success_title": "Importação bem-sucedida",
   "import_success_description": "Os dados da prateleira foram atualizados.",
   "import_error_title": "Erro na importação",
   "import_error_invalid_json": "Ocorreu um erro ao analisar o arquivo JSON. Verifique se o formato está correto.",
+  "import_error_parsing_file": "Falha ao analisar o arquivo importado. Verifique se é um JSON válido.",
   "reset_button": "Resetar",
   "reset_dialog_title": "Você tem certeza?",
   "reset_dialog_description": "Esta ação não pode ser desfeita. Todos os seus dados de prateleira serão permanentemente apagados.",
   "confirm_reset_button": "Sim, resetar",
-  "cancel_button": "Cancelar",
   "reset_success_title": "Prateleira Resetada",
   "reset_success_description": "Sua prateleira foi resetada para o estado inicial.",
   "move_notebooks_title": "Mover Cadernos",
   "move_notebooks_description": "Selecione a célula de destino para mover os cadernos selecionados.",
   "target_cell_label": "Célula de Destino",
   "move_button": "Mover",
-  "delete_selected_button": "Deletar Selecionados"
-}
+  "delete_selected_button": "Deletar Selecionados",
+  "select_all_button": "Selecionar Todos",
+  "deselect_all_button": "Desselecionar Todos",
   "import_error_reading_file": "Falha ao ler o arquivo.",
+  "import_error_invalid_data_format": "O formato dos dados importados é inválido.",
   "import_dialog_title": "Importar Dados da Estante",
   "import_dialog_description": "Você deseja mesclar os dados importados com os dados existentes ou substituí-los completamente?",
   "import_dialog_cancel": "Cancelar",
   "import_dialog_merge": "Mesclar",
-  "import_dialog_replace": "Substituir"
+  "import_dialog_replace": "Substituir",
+  "edit_slot_description_draggable": "Arraste e solte os cadernos para reorganizar. Clique em um slot para editar o código de barras.",
+  "move_mode_active_title": "Modo de Movimentação Ativo",
+  "move_mode_active_description": "Clique em um slot vazio para mover o caderno selecionado para lá, ou clique em um slot ocupado para mesclar.",
+  "export_success_title": "Exportação bem-sucedida",
+  "export_success_description": "Os dados da prateleira foram exportados com sucesso."
 }
